--- a/src/styles/components/terminal.css
+++ b/src/styles/components/terminal.css
@@ -7,7 +7,7 @@
   box-sizing: border-box !important;
 }
 
-.xterm, .xterm-viewport, .xterm-screen {
+.xterm, .xterm-viewport {
   height: 100% !important;
   width: 100% !important;
   padding: 0 !important;
