--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,6 +21,7 @@
 @import './components/color-selector.css';
 @import './components/folder-dialog.css';
 @import './components/animated-themes.css';
+@import './components/password-manager-sidebar.css';
 
 
 /* --- Pages --- */
