--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,6 +22,7 @@
 @import './components/folder-dialog.css';
 @import './components/animated-themes.css';
 @import './components/password-manager-sidebar.css';
+@import './components/ai-chat.css';
 
 
 /* --- Pages --- */
